Add the radius of gyration paper by Fixman 1962.

--- a/All.bib
+++ b/All.bib
@@ -6,7 +6,7 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: b542496e7349f4c240391fe6cfe63eaf3894c041
+% Commit: bd02acceebca1713ee73b6332d36e8f67e96e7f1
 % Date: 2023-11-17
 % ---------------------------
 
@@ -3143,22 +3143,6 @@
 }
 @article{balan.tudor:10:stochastic,
   author        = {Balan, Raluca M. and Tudor, Ciprian A.},
-  title         = {The stochastic wave equation with fractional noise: a random field approach},
-  journal       = {Stochastic Process. Appl.},
-  fjournal      = {Stochastic Processes and their Applications},
-  volume        = {120},
-  year          = {2010},
-  number        = {12},
-  pages         = {2468--2494},
-  issn          = {0304-4149},
-  mrclass       = {60H15 (60G60 60H05)},
-  mrnumber      = {2728174},
-  mrreviewer    = {Llu\'{i}s Quer-Sardanyons},
-  doi           = {10.1016/j.spa.2010.08.006},
-  url           = {https://doi.org/10.1016/j.spa.2010.08.006}
-}
-@article{balan.tudor:10:stochastic*1,
-  author        = {Balan, Raluca M. and Tudor, Ciprian A.},
   title         = {Stochastic heat equation with multiplicative fractional-colored noise},
   journal       = {J. Theoret. Probab.},
   fjournal      = {Journal of Theoretical Probability},
@@ -3172,6 +3156,22 @@
   mrreviewer    = {David Nualart},
   doi           = {10.1007/s10959-009-0237-3},
   url           = {https://doi.org/10.1007/s10959-009-0237-3}
+}
+@article{balan.tudor:10:stochastic*1,
+  author        = {Balan, Raluca M. and Tudor, Ciprian A.},
+  title         = {The stochastic wave equation with fractional noise: a random field approach},
+  journal       = {Stochastic Process. Appl.},
+  fjournal      = {Stochastic Processes and their Applications},
+  volume        = {120},
+  year          = {2010},
+  number        = {12},
+  pages         = {2468--2494},
+  issn          = {0304-4149},
+  mrclass       = {60H15 (60G60 60H05)},
+  mrnumber      = {2728174},
+  mrreviewer    = {Llu\'{i}s Quer-Sardanyons},
+  doi           = {10.1016/j.spa.2010.08.006},
+  url           = {https://doi.org/10.1016/j.spa.2010.08.006}
 }
 @article{balan.yuan:22:spatial,
   author        = {Balan, Raluca M. and Yuan, Wangjun},
@@ -11561,19 +11561,7 @@
   doi           = {10.1090/conm/307/05265},
   url           = {https://doi.org/10.1090/conm/307/05265}
 }
-@incollection{bourgain:02:on,
-  author        = {Bourgain, J.},
-  title         = {On the distribution of {D}irichlet sums. {II}},
-  booktitle     = {Number theory for the millennium, {I} ({U}rbana, {IL}, 2000)},
-  pages         = {87--109},
-  publisher     = {A K Peters, Natick, MA},
-  year          = {2002},
-  isbn          = {1-56881-126-8},
-  mrclass       = {11M26},
-  mrnumber      = {1956220},
-  mrreviewer    = {Jerzy\ Kaczorowski}
-}
-@article{bourgain:02:on*1,
+@article{bourgain:02:on,
   author        = {Bourgain, J.},
   title         = {On the distributions of the {F}ourier spectrum of {B}oolean functions},
   journal       = {Israel J. Math.},
@@ -11587,6 +11575,18 @@
   mrreviewer    = {Colin\ C.\ Graham},
   doi           = {10.1007/BF02785861},
   url           = {https://doi.org/10.1007/BF02785861}
+}
+@incollection{bourgain:02:on*1,
+  author        = {Bourgain, J.},
+  title         = {On the distribution of {D}irichlet sums. {II}},
+  booktitle     = {Number theory for the millennium, {I} ({U}rbana, {IL}, 2000)},
+  pages         = {87--109},
+  publisher     = {A K Peters, Natick, MA},
+  year          = {2002},
+  isbn          = {1-56881-126-8},
+  mrclass       = {11M26},
+  mrnumber      = {1956220},
+  mrreviewer    = {Jerzy\ Kaczorowski}
 }
 @incollection{bourgain:02:on*2,
   author        = {Bourgain, J.},
@@ -11668,23 +11668,7 @@
   doi           = {10.1007/978-3-540-36428-3\_8},
   url           = {https://doi.org/10.1007/978-3-540-36428-3_8}
 }
-@incollection{bourgain:03:on*1,
-  author        = {Bourgain, J.},
-  title         = {On the isotropy-constant problem for ``{PSI}-2''-bodies},
-  booktitle     = {Geometric aspects of functional analysis},
-  series        = {Lecture Notes in Math.},
-  volume        = {1807},
-  pages         = {114--121},
-  publisher     = {Springer, Berlin},
-  year          = {2003},
-  isbn          = {3-540-00485-8},
-  mrclass       = {46B07 (46B20 52A20 60G15)},
-  mrnumber      = {2083391},
-  mrreviewer    = {Apostolos\ A.\ Giannopoulos},
-  doi           = {10.1007/978-3-540-36428-3\_9},
-  url           = {https://doi.org/10.1007/978-3-540-36428-3_9}
-}
-@article{bourgain:03:on*2,
+@article{bourgain:03:on*1,
   author        = {Bourgain, J.},
   title         = {On the {E}rd\H{o}s-{V}olkmann and {K}atz-{T}ao ring conjectures},
   journal       = {Geom. Funct. Anal.},
@@ -11699,6 +11683,22 @@
   mrreviewer    = {Ben\ Joseph\ Green},
   doi           = {10.1007/s000390300008},
   url           = {https://doi.org/10.1007/s000390300008}
+}
+@incollection{bourgain:03:on*2,
+  author        = {Bourgain, J.},
+  title         = {On the isotropy-constant problem for ``{PSI}-2''-bodies},
+  booktitle     = {Geometric aspects of functional analysis},
+  series        = {Lecture Notes in Math.},
+  volume        = {1807},
+  pages         = {114--121},
+  publisher     = {Springer, Berlin},
+  year          = {2003},
+  isbn          = {3-540-00485-8},
+  mrclass       = {46B07 (46B20 52A20 60G15)},
+  mrnumber      = {2083391},
+  mrreviewer    = {Apostolos\ A.\ Giannopoulos},
+  doi           = {10.1007/978-3-540-36428-3\_9},
+  url           = {https://doi.org/10.1007/978-3-540-36428-3_9}
 }
 @incollection{bourgain:03:random,
   author        = {Bourgain, J.},
@@ -12535,23 +12535,7 @@
   doi           = {10.1134/s0081543813010045},
   url           = {https://doi.org/10.1134/s0081543813010045}
 }
-@article{bourgain:13:on*1,
-  author        = {Bourgain, J.},
-  title         = {On the {F}ourier-{W}alsh spectrum of the {M}oebius function},
-  journal       = {Israel J. Math.},
-  fjournal      = {Israel Journal of Mathematics},
-  volume        = {197},
-  year          = {2013},
-  number        = {1},
-  pages         = {215--235},
-  issn          = {0021-2172,1565-8511},
-  mrclass       = {11F30},
-  mrnumber      = {3096614},
-  mrreviewer    = {Gergely\ Harcos},
-  doi           = {10.1007/s11856-013-0002-2},
-  url           = {https://doi.org/10.1007/s11856-013-0002-2}
-}
-@incollection{bourgain:13:on*2,
+@incollection{bourgain:13:on*1,
   author        = {Bourgain, J.},
   title         = {On the {L}yapunov exponents of {S}chr\"{o}dinger operators associated with the standard map},
   booktitle     = {Asymptotic geometric analysis},
@@ -12567,7 +12551,7 @@
   doi           = {10.1007/978-1-4614-6406-8\_3},
   url           = {https://doi.org/10.1007/978-1-4614-6406-8_3}
 }
-@article{bourgain:13:on*3,
+@article{bourgain:13:on*2,
   author        = {Bourgain, J.},
   title         = {On the correlation of the {M}oebius function with rank-one systems},
   journal       = {J. Anal. Math.},
@@ -12581,6 +12565,22 @@
   mrreviewer    = {Giulio\ Tiozzo},
   doi           = {10.1007/s11854-013-0016-z},
   url           = {https://doi.org/10.1007/s11854-013-0016-z}
+}
+@article{bourgain:13:on*3,
+  author        = {Bourgain, J.},
+  title         = {On the {F}ourier-{W}alsh spectrum of the {M}oebius function},
+  journal       = {Israel J. Math.},
+  fjournal      = {Israel Journal of Mathematics},
+  volume        = {197},
+  year          = {2013},
+  number        = {1},
+  pages         = {215--235},
+  issn          = {0021-2172,1565-8511},
+  mrclass       = {11F30},
+  mrnumber      = {3096614},
+  mrreviewer    = {Gergely\ Harcos},
+  doi           = {10.1007/s11856-013-0002-2},
+  url           = {https://doi.org/10.1007/s11856-013-0002-2}
 }
 @article{bourgain:13:prescribing,
   author        = {Bourgain, Jean},
@@ -14058,22 +14058,6 @@
 }
 @article{bourgain:84:on,
   author        = {Bourgain, J.},
-  title         = {On bases in the disc algebra},
-  journal       = {Trans. Amer. Math. Soc.},
-  fjournal      = {Transactions of the American Mathematical Society},
-  volume        = {285},
-  year          = {1984},
-  number        = {1},
-  pages         = {133--139},
-  issn          = {0002-9947,1088-6850},
-  mrclass       = {46J15 (46B15 46E15)},
-  mrnumber      = {748834},
-  mrreviewer    = {Jacques\ Mayer},
-  doi           = {10.2307/1999476},
-  url           = {https://doi.org/10.2307/1999476}
-}
-@article{bourgain:84:on*1,
-  author        = {Bourgain, J.},
   title         = {On martingales transforms in finite-dimensional lattices with an appendix on the {$K$}-convexity constant},
   journal       = {Math. Nachr.},
   fjournal      = {Mathematische Nachrichten},
@@ -14087,7 +14071,7 @@
   doi           = {10.1002/mana.19841190104},
   url           = {https://doi.org/10.1002/mana.19841190104}
 }
-@inproceedings{bourgain:84:on*2,
+@inproceedings{bourgain:84:on*1,
   author        = {Bourgain, J.},
   title         = {On nonisomorphisms of algebras of analytic functions},
   booktitle     = {Proceedings of the second international conference on operator algebras, ideals, and their applications in theoretical physics ({L}eipzig, 1983)},
@@ -14098,6 +14082,22 @@
   year          = {1984},
   mrclass       = {46J15 (32E25)},
   mrnumber      = {763536}
+}
+@article{bourgain:84:on*2,
+  author        = {Bourgain, J.},
+  title         = {On bases in the disc algebra},
+  journal       = {Trans. Amer. Math. Soc.},
+  fjournal      = {Transactions of the American Mathematical Society},
+  volume        = {285},
+  year          = {1984},
+  number        = {1},
+  pages         = {133--139},
+  issn          = {0002-9947,1088-6850},
+  mrclass       = {46J15 (46B15 46E15)},
+  mrnumber      = {748834},
+  mrreviewer    = {Jacques\ Mayer},
+  doi           = {10.2307/1999476},
+  url           = {https://doi.org/10.2307/1999476}
 }
 @incollection{bourgain:84:propriete,
   author        = {Bourgain, Jean},
@@ -14212,6 +14212,21 @@
   mrnumber      = {832256}
 }
 @article{bourgain:85:on*1,
+  author        = {Bourgain, Jean},
+  title         = {On finitely generated closed ideals in {$H^infty(D)$}},
+  journal       = {Ann. Inst. Fourier (Grenoble)},
+  fjournal      = {Universit\'{e} de Grenoble. Annales de l'Institut Fourier},
+  volume        = {35},
+  year          = {1985},
+  number        = {4},
+  pages         = {163--174},
+  issn          = {0373-0956,1777-5310},
+  mrclass       = {46J15 (30H05 46J20)},
+  mrnumber      = {812323},
+  mrreviewer    = {Richard\ Rochberg},
+  url           = {http://www.numdam.org/item?id=AIF_1985__35_4_163_0}
+}
+@article{bourgain:85:on*2,
   author        = {Bourgain, J.},
   title         = {On square functions on the trigonometric system},
   journal       = {Bull. Soc. Math. Belg. S\'{e}r. B},
@@ -14225,7 +14240,7 @@
   mrnumber      = {847119},
   mrreviewer    = {Jos\'{e}\ L.\ Rubio de Francia}
 }
-@article{bourgain:85:on*2,
+@article{bourgain:85:on*3,
   author        = {Bourgain, J.},
   title         = {On {L}ipschitz embedding of finite metric spaces in {H}ilbert space},
   journal       = {Israel J. Math.},
@@ -14240,21 +14255,6 @@
   mrreviewer    = {Michel\ Deza},
   doi           = {10.1007/BF02776078},
   url           = {https://doi.org/10.1007/BF02776078}
-}
-@article{bourgain:85:on*3,
-  author        = {Bourgain, Jean},
-  title         = {On finitely generated closed ideals in {$H^infty(D)$}},
-  journal       = {Ann. Inst. Fourier (Grenoble)},
-  fjournal      = {Universit\'{e} de Grenoble. Annales de l'Institut Fourier},
-  volume        = {35},
-  year          = {1985},
-  number        = {4},
-  pages         = {163--174},
-  issn          = {0373-0956,1777-5310},
-  mrclass       = {46J15 (30H05 46J20)},
-  mrnumber      = {812323},
-  mrreviewer    = {Richard\ Rochberg},
-  url           = {http://www.numdam.org/item?id=AIF_1985__35_4_163_0}
 }
 @article{bourgain:85:sidon,
   author        = {Bourgain, Jean},
@@ -14545,23 +14545,7 @@
   mrnumber      = {934289},
   mrreviewer    = {Alberto\ Torchinsky}
 }
-@incollection{bourgain:87:on,
-  author        = {Bourgain, J.},
-  title         = {On dimension free maximal inequalities for convex symmetric bodies in {${\bf R}^n$}},
-  booktitle     = {Geometrical aspects of functional analysis (1985/86)},
-  series        = {Lecture Notes in Math.},
-  volume        = {1267},
-  pages         = {168--176},
-  publisher     = {Springer, Berlin},
-  year          = {1987},
-  isbn          = {3-540-18103-2},
-  mrclass       = {42B25 (42B15)},
-  mrnumber      = {907693},
-  mrreviewer    = {Roger\ L.\ Jones},
-  doi           = {10.1007/BFb0078144},
-  url           = {https://doi.org/10.1007/BFb0078144}
-}
-@article{bourgain:87:on*1,
+@article{bourgain:87:on,
   author        = {Bourgain, J.},
   title         = {On the {H}ausdorff dimension of harmonic measure in higher dimension},
   journal       = {Invent. Math.},
@@ -14577,7 +14561,7 @@
   doi           = {10.1007/BF01389238},
   url           = {https://doi.org/10.1007/BF01389238}
 }
-@incollection{bourgain:87:on*2,
+@incollection{bourgain:87:on*1,
   author        = {Bourgain, J.},
   title         = {On lattice packing of convex symmetric sets in {${\bf R}^n$}},
   booktitle     = {Geometrical aspects of functional analysis (1985/86)},
@@ -14592,6 +14576,22 @@
   mrreviewer    = {J.\ M.\ Wills},
   doi           = {10.1007/BFb0078132},
   url           = {https://doi.org/10.1007/BFb0078132}
+}
+@incollection{bourgain:87:on*2,
+  author        = {Bourgain, J.},
+  title         = {On dimension free maximal inequalities for convex symmetric bodies in {${\bf R}^n$}},
+  booktitle     = {Geometrical aspects of functional analysis (1985/86)},
+  series        = {Lecture Notes in Math.},
+  volume        = {1267},
+  pages         = {168--176},
+  publisher     = {Springer, Berlin},
+  year          = {1987},
+  isbn          = {3-540-18103-2},
+  mrclass       = {42B25 (42B15)},
+  mrnumber      = {907693},
+  mrreviewer    = {Roger\ L.\ Jones},
+  doi           = {10.1007/BFb0078144},
+  url           = {https://doi.org/10.1007/BFb0078144}
 }
 @article{bourgain:87:on*3,
   author        = {Bourgain, Jean},
@@ -14706,6 +14706,22 @@
 }
 @article{bourgain:88:on,
   author        = {Bourgain, J.},
+  title         = {On the pointwise ergodic theorem on {$L^p$} for arithmetic sets},
+  journal       = {Israel J. Math.},
+  fjournal      = {Israel Journal of Mathematics},
+  volume        = {61},
+  year          = {1988},
+  number        = {1},
+  pages         = {73--84},
+  issn          = {0021-2172},
+  mrclass       = {28D05},
+  mrnumber      = {937582},
+  mrreviewer    = {Alberto\ de la Torre},
+  doi           = {10.1007/BF02776302},
+  url           = {https://doi.org/10.1007/BF02776302}
+}
+@article{bourgain:88:on*1,
+  author        = {Bourgain, J.},
   title         = {On the maximal ergodic theorem for certain subsets of the integers},
   journal       = {Israel J. Math.},
   fjournal      = {Israel Journal of Mathematics},
@@ -14720,7 +14736,7 @@
   doi           = {10.1007/BF02776301},
   url           = {https://doi.org/10.1007/BF02776301}
 }
-@incollection{bourgain:88:on*1,
+@incollection{bourgain:88:on*2,
   author        = {Bourgain, J.},
   title         = {On finite-dimensional homogeneous {B}anach spaces},
   booktitle     = {Geometric aspects of functional analysis (1986/87)},
@@ -14735,22 +14751,6 @@
   mrreviewer    = {T.\ Figiel},
   doi           = {10.1007/BFb0081744},
   url           = {https://doi.org/10.1007/BFb0081744}
-}
-@article{bourgain:88:on*2,
-  author        = {Bourgain, J.},
-  title         = {On the pointwise ergodic theorem on {$L^p$} for arithmetic sets},
-  journal       = {Israel J. Math.},
-  fjournal      = {Israel Journal of Mathematics},
-  volume        = {61},
-  year          = {1988},
-  number        = {1},
-  pages         = {73--84},
-  issn          = {0021-2172},
-  mrclass       = {28D05},
-  mrnumber      = {937582},
-  mrreviewer    = {Alberto\ de la Torre},
-  doi           = {10.1007/BF02776302},
-  url           = {https://doi.org/10.1007/BF02776302}
 }
 @article{bourgain:88:remark,
   author        = {Bourgain, J.},
@@ -15033,23 +15033,7 @@
   doi           = {10.1007/BFb0089219},
   url           = {https://doi.org/10.1007/BFb0089219}
 }
-@article{bourgain:91:on*1,
-  author        = {Bourgain, J.},
-  title         = {On the {B}usemann-{P}etty problem for perturbations of the ball},
-  journal       = {Geom. Funct. Anal.},
-  fjournal      = {Geometric and Functional Analysis},
-  volume        = {1},
-  year          = {1991},
-  number        = {1},
-  pages         = {1--13},
-  issn          = {1016-443X,1420-8970},
-  mrclass       = {52A38},
-  mrnumber      = {1091609},
-  mrreviewer    = {W.\ J.\ Firey},
-  doi           = {10.1007/BF01895416},
-  url           = {https://doi.org/10.1007/BF01895416}
-}
-@incollection{bourgain:91:on*2,
+@incollection{bourgain:91:on*1,
   author        = {Bourgain, Jean},
   title         = {On the restriction and multiplier problems in {${\bf R}^3$}},
   booktitle     = {Geometric aspects of functional analysis (1989--90)},
@@ -15064,6 +15048,22 @@
   mrreviewer    = {Peter\ I.\ Lizorkin},
   doi           = {10.1007/BFb0089225},
   url           = {https://doi.org/10.1007/BFb0089225}
+}
+@article{bourgain:91:on*2,
+  author        = {Bourgain, J.},
+  title         = {On the {B}usemann-{P}etty problem for perturbations of the ball},
+  journal       = {Geom. Funct. Anal.},
+  fjournal      = {Geometric and Functional Analysis},
+  volume        = {1},
+  year          = {1991},
+  number        = {1},
+  pages         = {1--13},
+  issn          = {1016-443X,1420-8970},
+  mrclass       = {52A38},
+  mrnumber      = {1091609},
+  mrreviewer    = {W.\ J.\ Firey},
+  doi           = {10.1007/BF01895416},
+  url           = {https://doi.org/10.1007/BF01895416}
 }
 @incollection{bourgain:91:remarks,
   author        = {Bourgain, J.},
@@ -15240,21 +15240,6 @@
 }
 @article{bourgain:93:on*2,
   author        = {Bourgain, J.},
-  title         = {On the distribution of {D}irichlet sums},
-  journal       = {J. Anal. Math.},
-  fjournal      = {Journal d'Analyse Math\'{e}matique},
-  volume        = {60},
-  year          = {1993},
-  pages         = {21--32},
-  issn          = {0021-7670,1565-8538},
-  mrclass       = {11M99 (28A75)},
-  mrnumber      = {1253227},
-  mrreviewer    = {D.\ R.\ Heath-Brown},
-  doi           = {10.1007/BF03341964},
-  url           = {https://doi.org/10.1007/BF03341964}
-}
-@article{bourgain:93:on*3,
-  author        = {Bourgain, J.},
   title         = {On the {C}auchy problem for the {K}adomtsev-{P}etviashvili equation},
   journal       = {Geom. Funct. Anal.},
   fjournal      = {Geometric and Functional Analysis},
@@ -15268,6 +15253,21 @@
   mrreviewer    = {Daniel\ B\"{a}ttig},
   doi           = {10.1007/BF01896259},
   url           = {https://doi.org/10.1007/BF01896259}
+}
+@article{bourgain:93:on*3,
+  author        = {Bourgain, J.},
+  title         = {On the distribution of {D}irichlet sums},
+  journal       = {J. Anal. Math.},
+  fjournal      = {Journal d'Analyse Math\'{e}matique},
+  volume        = {60},
+  year          = {1993},
+  pages         = {21--32},
+  issn          = {0021-7670,1565-8538},
+  mrclass       = {11M99 (28A75)},
+  mrnumber      = {1253227},
+  mrreviewer    = {D.\ R.\ Heath-Brown},
+  doi           = {10.1007/BF03341964},
+  url           = {https://doi.org/10.1007/BF03341964}
 }
 @article{bourgain:94:approximation,
   author        = {Bourgain, Jean},
@@ -21158,20 +21158,7 @@
   doi           = {10.1016/S0167-7152(99)00163-7},
   url           = {https://doi.org/10.1016/S0167-7152(99)00163-7}
 }
-@incollection{chen:00:on,
-  author        = {Chen, Xia},
-  title         = {On the law of the iterated logarithm for local times of recurrent random walks},
-  booktitle     = {High dimensional probability, {II} ({S}eattle, {WA}, 1999)},
-  series        = {Progr. Probab.},
-  volume        = {47},
-  pages         = {249--259},
-  publisher     = {Birkh\"{a}user Boston, Boston, MA},
-  year          = {2000},
-  mrclass       = {60F15 (60J55)},
-  mrnumber      = {1857326},
-  mrreviewer    = {Ingemar Kaj}
-}
-@article{chen:00:on*1,
+@article{chen:00:on,
   author        = {Chen, Xia},
   title         = {On the limit laws of the second order for additive functionals of {H}arris recurrent {M}arkov chains},
   journal       = {Probab. Theory Related Fields},
@@ -21185,6 +21172,19 @@
   mrnumber      = {1736591},
   doi           = {10.1007/PL00008724},
   url           = {https://doi.org/10.1007/PL00008724}
+}
+@incollection{chen:00:on*1,
+  author        = {Chen, Xia},
+  title         = {On the law of the iterated logarithm for local times of recurrent random walks},
+  booktitle     = {High dimensional probability, {II} ({S}eattle, {WA}, 1999)},
+  series        = {Progr. Probab.},
+  volume        = {47},
+  pages         = {249--259},
+  publisher     = {Birkh\"{a}user Boston, Boston, MA},
+  year          = {2000},
+  mrclass       = {60F15 (60J55)},
+  mrnumber      = {1857326},
+  mrreviewer    = {Ingemar Kaj}
 }
 @article{chen:01:exact,
   author        = {Chen, Xia},
@@ -30928,6 +30928,21 @@
   doi           = {10.1002/cpa.3160450703},
   url           = {https://doi.org/10.1002/cpa.3160450703}
 }
+@article{fixman:62:radius-of-gyration-of-polymer-chains,
+  author        = {Fixman, Marshall},
+  title         = "{Radius of Gyration of Polymer Chains}",
+  fjournal      = {The Journal of Chemical Physics},
+  journal       = {J. Chem. Phys.},
+  volume        = {36},
+  number        = {2},
+  pages         = {306--310},
+  year          = {1962},
+  month         = {01},
+  issn          = {0021-9606},
+  doi           = {10.1063/1.1732501},
+  url           = {https://doi.org/10.1063/1.1732501},
+  eprint        = {https://pubs.aip.org/aip/jcp/article-pdf/36/2/306/11125538/306\_1\_online.pdf}
+}
 @article{flandoli.g-atarek:95:martingale,
   author        = {Flandoli, Franco and G\polhk atarek, Dariusz},
   title         = {Martingale and stationary solutions for stochastic {N}avier-{S}tokes equations},
@@ -37503,7 +37518,7 @@
   publisher     = {Cambridge University Press},
   author        = {Hoessly, Linard and Wiuf, Carsten and Xia, Panqiu},
   year          = {2022},
-  pages         = {1–23}
+  pages         = {1–-23}
 }
 @article{hofmanova.zhang:17:quasilinear,
   author        = {Hofmanov\'{a}, Martina and Zhang, Tusheng},
@@ -62930,20 +62945,6 @@
 }
 @book{talagrand:11:mean,
   author        = {Talagrand, Michel},
-  title         = {Mean field models for spin glasses. {V}olume {II}},
-  series        = {Ergebnisse der Mathematik und ihrer Grenzgebiete. 3. Folge. A Series of Modern Surveys in Mathematics [Results in Mathematics and Related Areas. 3rd Series. A Series of Modern Surveys in Mathematics]},
-  volume        = {55},
-  note          = {Advanced replica-symmetry and low temperature},
-  publisher     = {Springer, Heidelberg},
-  year          = {2011},
-  pages         = {xii+629},
-  isbn          = {978-3-642-22252-8; 978-3-642-22253-5},
-  mrclass       = {60F10 (60G15 60K35 82B44 82C32 92E10)},
-  mrnumber      = {3024566},
-  mrreviewer    = {Francis Comets}
-}
-@book{talagrand:11:mean*1,
-  author        = {Talagrand, Michel},
   title         = {Mean field models for spin glasses. {V}olume {I}},
   series        = {Ergebnisse der Mathematik und ihrer Grenzgebiete. 3. Folge. A Series of Modern Surveys in Mathematics [Results in Mathematics and Related Areas. 3rd Series. A Series of Modern Surveys in Mathematics]},
   volume        = {54},
@@ -62957,6 +62958,20 @@
   mrreviewer    = {Francis Comets},
   doi           = {10.1007/978-3-642-15202-3},
   url           = {https://doi.org/10.1007/978-3-642-15202-3}
+}
+@book{talagrand:11:mean*1,
+  author        = {Talagrand, Michel},
+  title         = {Mean field models for spin glasses. {V}olume {II}},
+  series        = {Ergebnisse der Mathematik und ihrer Grenzgebiete. 3. Folge. A Series of Modern Surveys in Mathematics [Results in Mathematics and Related Areas. 3rd Series. A Series of Modern Surveys in Mathematics]},
+  volume        = {55},
+  note          = {Advanced replica-symmetry and low temperature},
+  publisher     = {Springer, Heidelberg},
+  year          = {2011},
+  pages         = {xii+629},
+  isbn          = {978-3-642-22252-8; 978-3-642-22253-5},
+  mrclass       = {60F10 (60G15 60K35 82B44 82C32 92E10)},
+  mrnumber      = {3024566},
+  mrreviewer    = {Francis Comets}
 }
 @article{talagrand:94:sharper,
   author        = {Talagrand, M.},
@@ -68796,7 +68811,7 @@
   journal       = {GEOPHYSICS},
   volume        = {79},
   number        = {3},
-  pages         = {T105-T116},
+  pages         = {T105--T116},
   year          = {2014},
   doi           = {10.1190/geo2013-0245.1},
   url           = {https://doi.org/10.1190/geo2013-0245.1},
